--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+# Sphinx documentatio
 docs/_build/
 
 # PyBuilder
@@ -138,6 +138,7 @@ celerybeat.pid
 .env
 .envrc
 .venv
+.pyenv
 env/
 venv/
 ENV/
@@ -205,3 +206,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# VSCode
+VSCode-win32-x64*
+
+# Embed Python 
+python-*-embed-amd64
