--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,24 @@
 [tool.ruff]
-select = [
-    "F",
-    "B",
-    "I",
-    "E",
-    "W"
-]
-ignore = []
-fixable = ["ALL"]
-exclude = [".ruff_cache"]
 line-length = 120
-indent-width = 4
 target-version = "py310"
+
+[tool.ruff.format]
+indent-style = "space"
+quote-style = "double"
+
+[tool.ruff.lint]
+exclude = [".ruff_cache", "ui_.*\\.py$"]
+fixable = ["ALL"]
+ignore = []
+select = ["F", "B", "I", "E", "W", "ANN", "TC"]
+
+[tool.mypy]
+python_version = "3.10"
+strict = true
+ignore_missing_imports = true
+exclude = [
+    "ui_.*\\.py$"
+]
+
+[mypy-PySide6.*]
+ignore_missing_imports = false
