--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ share/python-wheels/
 *.egg
 MANIFEST
 get-pip.py
+LOCAL_VERSION
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
